Refactoring class BotUpdate create methods for reading and updating topics file refactoring logic findig topics and quizes